Atuaizações: ajuste de strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Projeto Autenticação Android Java</string>
-    <string name="Login">Insira Seuus Dados</string>
+    <string name="Login">Insira Seus Dados</string>
     <string name="Cadastro">Insira seus dados para cadastro</string>
 </resources>
